--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+lib_deps =
+    NewPing
+    Adafruit TCS34725
+    Adafruit Unified Sensor
+    Adafruit BusIO
