--- a/platformio.ini
+++ b/platformio.ini
@@ -2,4 +2,14 @@
 platform = espressif32
 board = esp32dev
 framework = espidf
+; Esta configuración es para tu robot normal
+build_src_filter = +<*> -<test_motores.cpp>
 
+[env:test_motores]
+platform = espressif32
+board = esp32dev
+framework = espidf
+; AQUÍ ESTÁ EL TRUCO:
+; "+" incluye archivos, "-" excluye archivos.
+; Excluimos main.cpp y MaquinaEstados.cpp para que sus errores no detengan la prueba.
+build_src_filter = +<*> -<main.cpp> -<MaquinaEstados.cpp> -<SensorLimite.cpp> -<SensorRival.cpp>
